--- a/master.css/main.css
+++ b/master.css/main.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 /* start of componant */
@@ -108,11 +109,20 @@ header .container::after {
   z-index: -1;
 }
 
+#close,
+#open {
+  display: none;
+}
+@media (max-width: 767px) {
+  #open {
+    display: block;
+  }
+}
 header nav {
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: right;
 }
 
 @media (min-width: 768px) {
@@ -127,23 +137,35 @@ header nav ul {
 
 @media (max-width: 767px) {
   header nav ul {
-    display: none;
-  }
-
-  header nav .bar:hover + ul {
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 100%;
+    top: -1000%;
     left: 0;
-
+    background: #00000069;
     width: 100%;
-    background-color: #00000078;
+    padding: 5px;
+    transition: 0.5s;
   }
+
+  /* header .container + ul {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: -1000%;
+    left: 0;
+    background: #00000069;
+    width: 100%;
+    padding: 5px;
+    transition: 0.5s;
+  } */
 
   header nav ul li a {
     padding: 15px;
   }
+}
+#close {
+  display: none;
 }
 
 header nav ul a {
